--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Witherflare | Home</title>
 </head>
 <body>
+    <div class="topnav">
+        <a href="/",class="active",class="navbut">Home</a>
+        <a href="/projects",class="navbut">Projects</a>
+      </div>
+
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
