--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,12 @@
     <title>Witherflare | Home</title>
 </head>
 <body>
-    <div class="topnav">
-        <a href="/",class="active",class="navbut">Home</a>
-        <a href="/projects",class="navbut">Projects</a>
-      </div>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a class="active" href="/projects">Projects</a></li>
+      </ul>
 
-    <h1>Projects</h1>
-    <p>E</p>
+    <h1>Hello e</h1>
+    <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
