--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Witherflare | Home</title>
 </head>
 <body>
-    <div class="topnav">
-        <a href="/",class="active",class="navbut">Home</a>
-        <a href="/projects",class="navbut">Projects</a>
-      </div>
+    <ul>
+        <li><a class="active" href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
+      </ul>
 
-    <h1>Hello World</h1>
+    <h1>Hello e</h1>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
