--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a class="active" href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
       </ul>
-      <br>
-      <br>
-      <center>
+
     <h1>Hello e</h1>
     <p>I'm hosted with GitHub Pages.</p>
-
-    </center>
 </body>
 </html>
