--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <ul>
         <li><a class="active" href="/">Home</a></li>
         <li><a href="/projects">Projects</a></li>
-      </ul>
+    </ul>
 
-    <h1>Hello e</h1>
+    <br>
+    <br>
+    <br>
+    <center>
+    <h1>Witherflare</h1>
     <p>I'm hosted with GitHub Pages.</p>
+
+
+    </center>
 </body>
 </html>
