--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,9 @@
         <li><a href="/">Home</a></li>
         <li><a class="active" href="/projects">Projects</a></li>
     </ul>
-
+    <center>
     <h1>Hello e</h1>
     <p>I'm hosted with GitHub Pages.</p>
+</center>
 </body>
 </html>
