--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="/">Home</a></li>
-        <li><a href="/projects">Projects</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
     </ul>
-
+    <br>
     <br>
     <br>
     <br>
     <center>
-    <h1>Witherflare</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1 class="title">Witherflare</h1>
+    <h2> Minecraft datapacks, tools, and more </h2>
+    <img src="styles/assets/background.gif">
+    <br>
+    <hr>
+    <br>
+    <p>e</p>
 
 
     </center>
