--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,18 @@
 </head>
 <body>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a class="active" href="/projects">Projects</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="projects.html">Projects</a></li>
     </ul>
+
+    <br>
+    <br>
+    <br>
     <center>
-    <h1>Hello e</h1>
+    <h1>Witherflare</h1>
     <p>I'm hosted with GitHub Pages.</p>
-</center>
+
+
+    </center>
 </body>
 </html>
