--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Witherflare | Home</title>
-</head>
-<body>
-    <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-    </ul>
-    <br>
-    <br>
-    <br>
-    <br>
-    <center>
-    <h1 class="title">Witherflare</h1>
-    <h2> Minecraft datapacks, tools, and more </h2>
-    <img src="styles/assets/background.gif">
-    <br>
-    <hr>
-    <br>
-    <p>e</p>
-
-
-    </center>
-</body>
+    <head>
+        <link rel="stylesheet" href="styles/style.css">
+        <title>Witherflare | Home</title>
+    </head>
+    <body>
+        <center>
+            <div class="header">
+                <br>
+                <h1 class="title center">Witherflare</h1>
+                <h2 class="center0"> Minecraft datapacks, tools, and more </h2>
+                <button onclick="window.location.href='projects.html'" class="homebutton center1">Projects</button>
+                <br>
+            </div>
+        </center>
+    </body>
 </html>
