Fixed issues when not using Google dark mode

--- a/projects.html
+++ b/projects.html
@@ -6,24 +6,27 @@
     </head>
     <body>
         <center>
-            <div class="header">
+            <br>
+            <button onclick="window.location.href='index.html'" class="projectbutton">Home</button>
+            <h1 class="title">Projects</h1>
+            <br>
+            <div class="projects">
                 <br>
-                <button onclick="window.location.href='index.html'" class="projectbutton">Home</button>
-                <h1 class="title center2">Projects</h1>
-                <div class="projects">
-                    <div class="project">
-                        <h1>GUI Compiler</h1>
-                        <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft, using a datapack.</h2>
-                        <button onclick="window.open('https\:\/\/gui-compiler.glitch.me/','_blank')" class="projectbutton">Launch</button>
-                        <hr>
-                    </div>
-                    <div class="project">
-                        <h1>Datapack Setup Script</h1>
-                        <h4>Datapack Setup is a simple script that will automatically set up a datapack's structure for you. Simply rename the script to what you want your datapack's namespace to be called and double-click it. It will automatically set up the file structure, and self-destruct once it has finished.</h2>
-                            <img class="projectgif" src="styles/assets/datapacksetup.gif"> <br><br>
-                        <button onclick="window.location.href='https\:\/\/cdn.discordapp.com/attachments/856404530518425651/856621650749030460/DatapackSetup.bat'" class="projectbutton">Download</button>
-                        <hr>
-                    </div>
+                <div class="project">
+                    <h1>GUI Compiler</h1>
+                    <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft, using a datapack.</h2>
+                    <button onclick="window.open('https\:\/\/gui-compiler.glitch.me/','_blank')" class="projectbutton">Launch</button>
+                    <br>
+                    <br>
+                    <hr>
+                </div>
+                <div class="project">
+                    <h1>Datapack Setup Script</h1>
+                    <h4>Datapack Setup is a simple script that will automatically set up a datapack's structure for you. Simply rename the script to what you want your datapack's namespace to be called and double-click it. It will automatically set up the file structure, and self-destruct once it has finished.</h2>
+                        <img class="projectgif" src="styles/assets/datapacksetup.gif"> <br><br>
+                    <button onclick="window.location.href='https\:\/\/cdn.discordapp.com/attachments/856404530518425651/856621650749030460/DatapackSetup.bat'" class="projectbutton">Download</button>
+                    <br>
+                    <br>
                 </div>
             </div>
         </center>
