Added AutoSus as a project and changed main page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="header">
                 <br>
                 <h1 class="title center">Witherflare</h1>
-                <h2 class="center0"> Minecraft datapacks, tools, and more </h2>
+                <h2 class="center0"> Minecraft datapacks, tools, mods, and more </h2>
                 <button onclick="window.location.href='projects.html'" class="homebutton center1">Projects</button>
                 <br>
             </div>
