--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,16 @@
                     <button onclick="window.location.href='https\:\/\/cdn.discordapp.com/attachments/856404530518425651/856621650749030460/DatapackSetup.bat'" class="projectbutton">Download</button>
                     <br>
                     <br>
+                    <hr>
+                </div>
+                <div class="project">
+                    <h1>Autosus</h1>
+                    <h4>Possibly the best thing I have ever created.</h2>
+                        <h5>Made with ChatTriggers</h5>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/GQREGqJ4mMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
+                    <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/AutoSus','_blank')" class="projectbutton">Learn More</button>
+                    <br>
+                    <br>
                 </div>
             </div>
         </center>
