--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles/style.css">
         <title>Witherflare | Home</title>
+        <link rel="shortcut icon" type="image/png" href="styles/assets/icon.png"/>
     </head>
     <body>
         <center>
