--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles/style.css">
-        <title>Witherflare | Home</title>
+        <title>Witherflare | Projects</title>
+        <link rel="shortcut icon" type="image/png" href="styles/assets/icon.png"/>
     </head>
     <body>
         <center>
