--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                 <br>
                 <div class="project">
                     <h1>GUI Compiler</h1>
-                    <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft, using a datapack.</h2>
+                    <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft using a datapack.</h2>
                     <button onclick="window.open('https\:\/\/gui-compiler.glitch.me/','_blank')" class="projectbutton">Launch</button>
                     <br>
                     <br>
