Expanded on some project descriptions, and changed a class name.

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                 <br>
                 <div class="project">
                     <h1>GUI Compiler</h1>
-                    <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft using a datapack.</h2>
+                    <h4>GUI Compiler is a website that allows you to easily create your own GUIs in Vanilla Minecraft using a datapack. You select a name, GUI type, optimization level, and customize the slots, then you can download the GUI datapack as a zip file! More information can be found on the <a href="https://gui-compiler.glitch.me/howtouse" target="_blank">How to Use</a> page.</h2>
                     <button onclick="window.open('https\:\/\/gui-compiler.glitch.me/','_blank')" class="projectbutton">Launch</button>
                     <br>
                     <br>
@@ -24,7 +24,7 @@
                 <div class="project">
                     <h1>Datapack Setup Script</h1>
                     <h4>Datapack Setup is a simple script that will automatically set up a datapack's structure for you. Simply rename the script to what you want your datapack's namespace to be called and double-click it. It will automatically set up the file structure, and self-destruct once it has finished.</h2>
-                        <img class="projectgif" src="styles/assets/datapacksetup.gif"> <br><br>
+                        <img class="projectimg" src="styles/assets/datapacksetup.gif"> <br><br>
                     <button onclick="window.location.href='https\:\/\/cdn.discordapp.com/attachments/856404530518425651/856621650749030460/DatapackSetup.bat'" class="projectbutton">Download</button>
                     <br>
                     <br>
@@ -32,8 +32,7 @@
                 </div>
                 <div class="project">
                     <h1>Autosus</h1>
-                    <h4>Possibly the best thing I have ever created.</h2>
-                        <h5>Made with ChatTriggers</h5>
+                    <h4>This module (made for ChatTriggers 1.8.9) automatically triggers Among Us related sounds and visuals when someone in chat says "sus". Possibly the best thing I have ever created.</h2>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/GQREGqJ4mMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
                     <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/AutoSus','_blank')" class="projectbutton">Learn More</button>
                     <br>
