Added PartyFinderPlus to projects page

--- a/projects.html
+++ b/projects.html
@@ -31,13 +31,20 @@
                     <hr>
                 </div>
                 <div class="project">
-                    <h1>Autosus</h1>
-                    <h4>This module (made for ChatTriggers 1.8.9) automatically triggers Among Us related sounds and visuals when someone in chat says "sus". Possibly the best thing I have ever created.</h2>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/GQREGqJ4mMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
-                    <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/AutoSus','_blank')" class="projectbutton">Learn More</button>
-                    <br>
-                    <br>
-                </div>
+                  <h1>Autosus</h1>
+                  <h4>This module (made for ChatTriggers 1.8.9) automatically triggers Among Us related sounds and visuals when someone in chat says "sus". Possibly the best thing I have ever created.</h2>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/GQREGqJ4mMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
+                  <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/AutoSus','_blank')" class="projectbutton">Learn More</button>
+                  <br>
+                  <br>
+              </div>
+              <div class="project">
+                <h1>PartyFinderPlus</h1>
+                <h4>A ChatTriggers module for Hypixel Skyblock's Party Finder. Automatically makes requests to the Hypixel API when players join your party and automatically kicks them if they are below certain requirements.</h2>
+                <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/PartyFinderPlus','_blank')" class="projectbutton">Learn More</button>
+                <br>
+                <br>
+            </div>
             </div>
         </center>
     </body>
