--- a/antiphishing.html
+++ b/antiphishing.html
@@ -1,1 +1,1 @@
-{"links": ["coinskyblock", "kirapog", "coinempires", "coinpixel"]}
+{"links": ["coinskyblock", "kirapog", "coinempires", "coinpixel", "aaronpog"]}
