--- a/antiphishing.html
+++ b/antiphishing.html
@@ -1,1 +1,1 @@
-{"links": ["coinskyblock", "kirapog", "coinempires", "coinpixel", "aaronpog"], "devwhitelist": [" com"], "devblacklist": ["complete", "commission"]}
+{"links": ["coinskyblock", "kirapog", "coinempires", "coinpixel", "aaronpog", "duckpog"], "devwhitelist": [" com"], "devblacklist": ["complete", "commission"]}
