--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,8 @@
               </div>
               <div class="project">
                 <h1>PartyFinderPlus</h1>
-                <h4>A ChatTriggers module for Hypixel Skyblock's Party Finder. Automatically makes requests to the Hypixel API when players join your party and automatically kicks them if they are below certain requirements.</h2>
-                <button onclick="window.open('https\:\/\/chattriggers.com/modules/v/PartyFinderPlus','_blank')" class="projectbutton">Learn More</button>
+                <h4>A ChatTriggers module (and Forge mod!) for Hypixel Skyblock's Party Finder. Automatically makes requests to the Hypixel API when players join your party and automatically kicks them if they are below certain requirements.</h2>
+                  <button onclick="window.open('https:\/\/github.com/Witherflare/PartyFinderPlus/releases','_blank')" class="projectbutton">Github</button><button onclick="window.open('https:\/\/www.chattriggers.com/modules/v/PartyFinderPlus','_blank')" class="projectbutton">CT Module</button>
                 <br>
                 <br>
             </div>
